[tool.poetry]
name = "monetary-api"
version = "0.1.0"
description = ""
authors = ["jose_sn <zeneto1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
django-filter = "^23.5"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
